Fri Apr 23 16:10:56 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy_perf_graph.rb: 第4版

Fri Apr 23 16:08:22 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy_perf_graph.rb: 第3版

Fri Apr 23 16:07:17 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy_perf_graph.rb: 第2版

Fri Apr 23 16:02:58 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy_perf_graph.rb: 第1版

Wed Apr 14 22:06:46 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-mod-group-by.rb, njob.rb, log-analysis.rb: REQ#227対応(その4)
	  PostFilterでのソート&セーブ時間の計測をできるようにした.

Wed Apr 14 16:01:35 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.conf, conf.rb: おすすめ値を標準値にした

Wed Apr 14 15:42:58 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-filter.rb, n-group-by.rb, port.rb: REQ#227対応(その3) njob実行
	  開始/終了, export開始/終了, import開始/終了

Thu Apr  8 20:15:39 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* b-merge-group_by.rb, n-direct-product.rb, n-group-by.rb,
  	  n-single-exportable.rb, port.rb: REQ#227対応(その2) Export対応

Thu Apr  8 19:25:00 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* processor.rb,b-merge-group_by.rb, bhere.rb here.rb,
	n-barrier.rb, n-direct-product.rb, n-each-element-mapper.rb,
	n-each-element-selector.rb, n-each-substream-mapper.rb, n-exec.rb,
	n-file-output.rb, n-filter.rb, n-find.rb, n-group-by.rb,
	n-identity.rb, n-input-iota.rb, n-join.rb, n-local-file-input.rb,
	n-merge-group-by.rb, n-mod-group-by.rb, n-output-varray.rb,
	n-single-exportable.rb, n-splitter.rb, n-there.rb, n-zipper.rb,
	nfile.rb, njob.rb, ntask.rb, port.rb: REQ#227対応(その1)

Wed Mar 31 21:15:34 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* controller.rb: BUG#215, BUG#220対応

Wed Mar 31 18:06:06 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy-HEAD.templ: ruby1.8系でirbが1.9系の時でもfairyコマンドが動
	  作するようにした.

Tue Mar 30 19:05:58 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* equijoin.rb: BUG#223対応. 
	* n-mod-group-by.rb: REQ#217対応(OnMemoryBuffer#eachの対応を忘れていた)
